review & problem statement

--- a/introduction.tex
+++ b/introduction.tex
@@ -2,14 +2,22 @@
 \label{cha:intro}
 \vspace{0.4 cm} 
 
-Brief introduction to the work @ U-Hopper.\footnote{ website u-hopper.com }
+Brief introduction of the internship and the project done at U-Hopper.\footnote{ website: https://www.u-hopper.com/ }
 
 
 \section{Problem statement}
 \label{sec:problem}
 \vspace{0.2 cm} 
 
-This is the problem \dots
+In managing a company that provides services to physical customers, the most important aspect is how to manage the flow of customers to guarantee them optimal service. Overcrowding and long waiting times are serious problems caused by poor demand management. These problems spoil the service experience of the users and especially during this pandemic period due to COVID-19, it is important to avoid generating crowds and queues to avoid new contagions. The repetition of these events leads to the loss of customers and therefore to the loss of revenue for the company. This fact is increasingly relevant in this period of crisis with very low liquidity.
+
+Offering an efficient and fast service is the key to increasing the number of customers in their own business. The solution is not to use all the available resources to try to meet these requirements, as excessive use of these leads to an increase in costs without leading to an increase in revenues.
+Of course, in order to calibrate the correct amount of service to offer, it would be necessary to know the demand. In particular it is necessary to know every time how many people require the service. Having this information is not trivial as it is highly variable over time and depends on several factors.
+
+The purpose of this thesis is to create a system capable of providing useful information to a company's organizational departments to manage its resources more effectively and efficiently. In particular, the proposed system will provide estimates of the number of customers in real-time through the use of machine learning techniques.
+From this information, it will be possible to understand how the demand is distributed over time and what the peak hours are. This will clarify in which time slots it is necessary to increase the capacity of the service in order to be able to provide it to a greater number of people. In a dual way, this information is also useful for understanding when there is less demand and it is possible to reduce the capacity of the service, with the aim of saving resources.
+
+The idea can also be extended to provide the same crowding data to its customers. With this data, they can plan better when to use the service offered, avoiding being in crowded situations or situations that require long waiting times.
 
 
 \section{Approach to the problem} 
@@ -23,4 +31,8 @@ This is the approach \dots
 \label{sec:outline}
 \vspace{0.2 cm} 
 
-Here it is written how the thesis is organized \dots
+In chapter~\ref{cha:soa} the state of the art is analyzed.
+In chapter~\ref{cha:system} the methodology and the choices in the system design are presented.
+Chapter~\ref{cha:implementation}  presents how the system is implemented.
+In chapter~\ref{cha:evaluation} the proposed system is validated and the results are evaluated.
+In the end, chapter~\ref{cha:conclusions} reports the conclusions and suggests some ideas for future work.
