--- a/state_of_art.tex
+++ b/state_of_art.tex
@@ -2,7 +2,7 @@
 \label{cha:soa}
 \vspace{0.4 cm} 
 
-In this section, the current state of the art is analyzed in the context of counting people in a particular place of interest. The various technologies presented in the literature for this purpose are discussed. Furthermore, the reasons why counting people through the sniffing of the Wi-Fi probe request frames is the solution with the best trade-offs are explained. In addition, several implementations and some use cases are presented.
+In this chapter, the current state of the art is analyzed in the context of counting people in a particular place of interest. The various technologies presented in the literature for this purpose are discussed. Furthermore, the reasons why counting people through the sniffing of the Wi-Fi probe request frames is the solution with the best trade-offs are explained. In addition, several implementations and some use cases are presented.
 At the end of this chapter, it will be clear the choice to develop this type of system with the U-Hopper team to find a solution to estimate the number of people. Unlike other solutions, our system achieves high accuracy, has a low-cost implementation, allows the transmission of data in real-time and ensures user privacy.
 
 
@@ -12,21 +12,21 @@ At the end of this chapter, it will be clear the choice to develop this type of 
 
 Let us start by thinking about before the popularity of mobile devices and the development of all these new communication technologies that are making this world increasingly interconnected. Therefore, before it becomes possible to exploit the signals of people's devices to identify and count them.
 
-In 2010, Pinna et al. compared some of the technologies of the time  (e.g. infrared sensors, treadle switch-based systems, weigh in motion systems using load cells) to avoid the manual collection of the occupation information and promote automatic counting \cite{pinna2010automatic}. All of these methods presented in the paper have good accuracy  (95\% in optimal conditions of use for treadle mats and approximately 90\% for the infrared sensors, 97\% for load cells) but have high costs and need the installation and the maintenance of the sensors.
+In 2010, Pinna et al. compared some of the technologies of the time (e.g. infrared sensors, treadle switch-based systems, weigh in motion systems using load cells) to avoid the manual collection of the occupation information and promote automatic counting \cite{pinna2010automatic}. All of these methods presented in the paper have good accuracy (95\% in optimal conditions of use for treadle mats and approximately 90\% for the infrared sensors, 97\% for load cells) but have high costs and need the installation and the maintenance of the sensors.
 
-Other studies have been carried out to improve the performance of infrared sensor systems. Jia and Zhang described a system with subordinate nodes for collecting information from pyroelectric infrared sensors and a master node that when it receives information from a sensor has to determine whether a person is entering or leaving \cite{jia2015application}. 
+Other studies have been carried out to improve the performance of infrared sensor systems. Jia and Zhang described a system with subordinate nodes for collecting information from pyroelectric infrared sensors and a master node that when it receives information from a sensor has to determine whether a person is entering or leaving \cite{jia2015application}.
 Such systems require sensors for each entry point, in the case of overcrowding or continuous flows of people, some sensors may not work properly and can lead to a wrong estimation. In these solutions, errors accumulate over time.
 
 Mikkelsen et al. compared a a light sensor estimator based method with a Wi-Fi-based method to estimate the number of people present \cite{mikkelsen2018sensing}. This simple Wi-Fi implementation uses a probability distribution of the number of Wi-Fi enabled devices that a person is carrying. They concluded that the Wi-Fi estimator is better at recovering after errors, while errors in light sensor estimator accumulate over time.
 These presented methods, in which errors accumulate over time, are not acceptable in a continuous monitoring system and this does not happen with the Wi-Fi solution and other solutions.
 
-Many methods are proposed in the literature for processing images and videos captured by a camera device. Recognition and tracking of people by a stereo vision system to increase or decrease a people counter \cite{bernini2014embedded}, a separated-aggregated framework based on deep learning to estimate the number of people from still images \cite{zhang2018auxiliary}, a deep learning-based method for estimating crowd density and the total number of people in high-density crowd images \cite{zhang2019deep}, estimation of the people flows and then summing them to obtain people densities \cite{liu2019estimating}, a locate size and count CNN (Convolutional Neural Network) model is proposed to to resolve people in dense crowds  \cite{sam2019locate}.
+Many methods are proposed in the literature for processing images and videos captured by a camera device. Recognition and tracking of people by a stereo vision system to increase or decrease a people counter \cite{bernini2014embedded}, a separated-aggregated framework based on deep learning to estimate the number of people from still images \cite{zhang2018auxiliary}, a deep learning-based method for estimating crowd density and the total number of people in high-density crowd images \cite{zhang2019deep}, estimation of the people flows and then summing them to obtain people densities \cite{liu2019estimating}, a locate size and count CNN (Convolutional Neural Network) model is proposed to to resolve people in dense crowds \cite{sam2019locate}.
 These methods rely on the use of cameras to get the data to analyze and therefore have the problems related to these devices. Images can be noisy in dim light conditions and, due to the presence of obstructions or overlaps, people may not be detectable. Moreover, the implementation of these methods entails high costs due to video camera devices. However, taking photos or videos of unknown people is always a privacy issue as decreed by the GDPR (General Data Protection Regulation) in the rights of the data subject. Therefore, these types of solutions cannot be used to solve our problem.
 
 A not very popular but interesting method of counting the number of people is to analyze the audio of a place with a microphone and count the different audio tones \cite{kannan2012low}. Afterward, Valle proposed a more sophisticated prediction model to estimate the occupancy of a room which borrows speech recognition tradition and is based on Gaussian mixtures and hidden Markov models \cite{valle2016abroa}.
 These methods can be inaccurate due to high ambient noise and the limitations on the quality of the microphones must be considered during the analysis. In addition, other sounds from smartphones or radios must be filtered to avoid being counted as people. However, as in the case of video methods, the analysis of the voice of unknown people is always a privacy issue as decreed by the GDPR. Therefore, these types of solutions cannot be used to solve our problem.
 
-As reported by wearesocial.com in the Digital 2020 report \footnote{https://wearesocial.com/digital-2020}, 67\% of the world population is a  mobile phone user. In Europe, Internet users are equal to 84\% of the population and 92\% of total Internet users is a mobile phone user. In this new era dominated by smartphones, radio-frequency solutions to exploit the signals of these devices to count people are increasing. In recent years Wi-Fi, Bluetooth, Bluetooth Low Energy, LTE (Long Term Evolution) approaches have been developed.
+As reported by wearesocial.com in the Digital 2020 report \footnote{https://wearesocial.com/digital-2020}, 67\% of the world population is a mobile phone user. In Europe, Internet users are equal to 84\% of the population and 92\% of total Internet users is a mobile phone user. In this new era dominated by smartphones, radio-frequency solutions to exploit the signals of these devices to count people are increasing. In recent years Wi-Fi, Bluetooth, Bluetooth Low Energy, LTE (Long Term Evolution) approaches have been developed.
 
 Many researchers have investigated the possibility of estimating the number of people using the two most popular standards for wireless communication, i.e. Wi-Fi and Bluetooth. In 2014 Schauer et al. performed this type of comparison with the aim of creating a pedestrian flow estimation system. They stated that only a fraction of surrounding devices could have been tracked by periodical Bluetooth scans. Therefore Bluetooth-based estimations were less accurate, showing an average correlation to the ground truth of only 0.53 in the best case. In contrast to Bluetooth, Wi-Fi tracking provided a good approximation of crowd densities and pedestrian flows with an average correlation of 0.75 \cite{schauer2014estimating}.
 
@@ -56,9 +56,9 @@ Handte et al. presented one of the first approaches to estimate crowd density by
 
 Mikkelsen and Madsen presented a system to anonymize the MAC address of the sniffed probe request frames, to sent them to a server and to analyze them putting two thresholds: minimum value of the RSSI (Received Signal Strength Indicator) and minimum detection time \cite{mikkelsen2016public}. The ratio between the estimated number of devices, obtained by setting the two thresholds, and the number of people is around 50\%. They said that the use of machine learning techniques could have ensured greater accuracy of estimates.
 
-Oliveira et al. designed a specific device to monitor the presence of people by analyzing the Wi-Fi probe request frames \cite{oliveira2018sherlock}. Subsequently, they proposed a method for estimating the number of devices with a very strong correlation with the ground truth of the number of people in the environment, with a Pearson’s correlation coefficient of 0.896 \cite{oliveira2019mobile}. They said that the experiment should be replicated in other scenarios to test the versatility of the method. Moreover,  they believed that one of the answers to get estimates closer to the ground truth values may be in the use of machine learning techniques.
+Oliveira et al. designed a specific device to monitor the presence of people by analyzing the Wi-Fi probe request frames \cite{oliveira2018sherlock}. Subsequently, they proposed a method for estimating the number of devices with a very strong correlation with the ground truth of the number of people in the environment, with a Pearson’s correlation coefficient of 0.896 \cite{oliveira2019mobile}. They said that the experiment should be replicated in other scenarios to test the versatility of the method. Moreover, they believed that one of the answers to get estimates closer to the ground truth values may be in the use of machine learning techniques.
 
-Nishide filtered the collected data using a combination of RSSI, packet frequency, and the total time duration which the nearby device is detected. Filtering is performed individually for each parameter, and then the linear regression and correlation coefficients are calculated  in different places \cite{nishide2019filter}. He said that there may be other ways to accurately estimate the number of people using machine learning.
+Nishide filtered the collected data using a combination of RSSI, packet frequency, and the total time duration which the nearby device is detected. Filtering is performed individually for each parameter, and then the linear regression and correlation coefficients are calculated in different places \cite{nishide2019filter}. He said that there may be other ways to accurately estimate the number of people using machine learning.
 
 These papers show us the possibility of sending data in real-time and that there is a correlation between the devices obtained from the collected data and the presence of people. Furthermore, they suggest that the use of advanced techniques, such as machine learning, could have a positive impact on accuracy in solving the occupancy problem.
 
