--- a/implementation.tex
+++ b/implementation.tex
@@ -2,14 +2,27 @@
 \label{cha:implementation}
 \vspace{0.4 cm} 
 
-Write about the implementation \dots
+This chapter presents how the system is implemented.
+Starting by describing the implementation of the data collector on a Raspberry Pi and then explaining how the Mosquitto MQTT Broker, the MongoDB database and the two Back-End parts for storing and analyzing the data were implemented on the U-Hopper server. After this section, it will be clear how the system was implemented for the testing and validation, that are discussed in the next section.
 
 
-\section{Sniffer implementation}
-\label{sec:sniffer}
+\section{Data collector implementation}
+\label{sec:collector}
 \vspace{0.2 cm} 
 
 Write how the sniffer has been implemented on the Raspberry Pi \dots
+
+Raspberry pi model 2B
+
+EDUP 802.11n Wi-Fi Dongle + Scapy for Wi-Fi packets sniffing
+
+RTC Board for timestamp detection
+
+Paho-MQTT per the MQTT transmission
+
+Netifaces for managing the connection
+
+BLAKE2s for MAC address anonymization
 
 
 % \section{Implementation of broker MQTT}
@@ -19,8 +32,20 @@ Write how the sniffer has been implemented on the Raspberry Pi \dots
 % Write how the broker MQTT has been implemented \dots
 
 
-\section{Implementation of the Back-End}
-\label{sec:backend}
+\section{Server implementation}
+\label{sec:server}
 \vspace{0.2 cm} 
 
 Write how the Back-End for analysis has been implemented \dots
+
+Docker Containers:
+
+Mosquitto \footnote{ website: https://hub.docker.com/\_/eclipse-mosquitto }
+
+MongoDB \footnote{ website: https://hub.docker.com/\_/mongo }
+
+Receiver with MQTT client using paho-MQTT and pymongo for storing data on MongoDB
+
+Analyzer uses pymongo and pandas to read and manage the data
+
+Sklearn is used to analyze this data and implementing the machine learning part
